Futsal Field/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\sqlite3\sqlite-jdbc-3.23.1.jar;C:\sqlite3\mysql-connector-java-5.1.23-bin.jar;C:\Users\Lenovo\kelompok7
-d
C:\Users\Lenovo\kelompok7\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Lenovo\kelompok7\Table3.java
<---- end of javadoc command ---->
Loading source file C:\Users\Lenovo\kelompok7\Table3.java...
Constructing Javadoc information...
C:\Users\Lenovo\kelompok7\Table3.java:7: error: cannot find symbol
class Table3 extends JFrame {  //Mendefinisikan  kelas Table3 sebagai Frame atau Form 
                     ^
  symbol: class JFrame
C:\Users\Lenovo\kelompok7\Table3.java:9: error: cannot find symbol
  JTable table = new JTable(model);							//JTable Mendeklarasikan table sebagai Class yang digunakan untuk menampilkan Tabel
  ^
  symbol:   class JTable
  location: class Table3
C:\Users\Lenovo\kelompok7\Table3.java:10: error: cannot find symbol
  private JTextField txt1   = new JTextField();				//Mendeklarasikan Object Text Input "txt1"
          ^
  symbol:   class JTextField
  location: class Table3
C:\Users\Lenovo\kelompok7\Table3.java:11: error: cannot find symbol
  private JTextField txt2   = new JTextField();				//Mendeklarasikan Object Text Input "txt2"
          ^
  symbol:   class JTextField
  location: class Table3
C:\Users\Lenovo\kelompok7\Table3.java:12: error: cannot find symbol
  private JButton btnAddRow = new JButton("Add Row");		//Mendeklarasikan Object Button (Tombol) "Add Row"
          ^
  symbol:   class JButton
  location: class Table3
5 errors
